--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 
 <body>
     <!-- Header Section -->
-    <section class="header">
-        <h1>Kowther Kahin</h1>
-
+    <header>
         <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </nav>
-    </section>
+      </header>
 
 <!-- Footer Section -->
 <footer>
