--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
           </ul>
         </nav>
       </header>
-
+      <section id="home">
+        <h1>Welcome to Kowther Kahin's Portfolio</h1>
+        <p>Passionate about engineering and committed to excellence.</p>
+        <a href="#projects" class="cta-button">View Projects</a>
+      </section>
+      <section id="about">
+        <h2>About Me</h2>
+        <img src="./assets/images/Kowther Photo.png" alt="Kowther Kahin">
+        <p>Add your detailed description here.</p>
+      </section>
+    
 <!-- Footer Section -->
 <footer>
     <div class="container">
