adds header seaction

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kowther Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/stlye.css">
 </head>
 
 <body>
@@ -15,21 +16,23 @@
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </header>
-      <section id="home">
-        <h1>Welcome to Kowther Kahin's Portfolio</h1>
-        <p>Passionate about engineering and committed to excellence.</p>
-        <a href="#projects" class="cta-button">View Projects</a>
-      </section>
-      <section id="about">
-        <h2>About Me</h2>
-        <img src="./assets/images/Kowther Photo.png" alt="Kowther Kahin">
-        <p>Add your detailed description here.</p>
-      </section>
+      <div  class="aboutme">
+        <section class="myname">
+          <h1>Hi, I am Kowther.</h1>
+          
+          <h2>
+            Full Stack Developer<br />
+            <br /></h2>
+        </section>
+        <!-----first page  profile photo-->
+        <section class="image">
+          <img src="./assets/images/Kowther Photo.png" class="profile" alt="Kowther-photo"/>
+        </section>
+      </div>
     
 <!-- Footer Section -->
 <footer>
